--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,43 +1,5 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
+@import url('./reset.css');
 
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-a {
-  color: currentColor;
-  text-decoration: none;
-}
-
-button {
-  font-family: inherit;
-  cursor: pointer;
-  border: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-input {
-  font-family: inherit;
-}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -62,6 +24,44 @@ body {
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+  width: 48px;
+  height: 48px;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  display: block;
+  border: 32px solid transparent;
+  border-top-color: #7190b4;
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: weld-rotate 2s infinite ease-in;
+}
+.loader:before {
+  border-color: transparent transparent transparent #4e75ff;
+  animation-delay: 0.5s;
+}
+@keyframes weld-rotate {
+  0%,
+  25% {
+    transform: rotate(0deg);
+  }
+  50%,
+  75% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .search-form {
   display: flex;
   justify-content: center;
@@ -89,7 +89,8 @@ body {
 .search-input:focus {
   border: 1px solid #4e75ff;
 }
-.search-btn {
+.search-btn,
+.load-btn {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -98,45 +99,28 @@ body {
   border-radius: 8px;
   padding: 8px 16px;
   background-color: #4e75ff;
+  border: none;
   transition: background-color 250ms linear;
+}
+.load-btn {
+  display: flex;
+  margin: 32px auto;
 }
 .search-btn:hover,
 .search-btn:focus,
-.search-btn:active {
+.search-btn:active,
+.load-btn:hover,
+.load-btn:focus,
+.load-btn:active {
   background-color: #6c8cff;
 }
-.loader-hidden {
-  position: relative; 
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
-}
 
-.loader-hidden::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 2px solid #ccc;
-  border-top-color: #333;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
 .gallery {
   display: flex;
   flex-wrap: wrap;
   max-width: 1128px;
   gap: 24px;
-  margin: 0 auto;
+  margin: 32px auto;
 }
 .gallery-item {
   display: flex;
@@ -151,29 +135,13 @@ body {
   height: 152px;
   width: 100%;
 }
-.hidden {
-  display: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-.cards-wrapper{
+.cards-wrapper {
   display: flex;
   justify-content: space-between;
   height: 48px;
-  padding: 4px 20px;
+  padding: 0px 20px;
 }
-.card-wrapper{
+.card-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -186,4 +154,16 @@ body {
 .image-stats p {
   font-size: 12px;
   line-height: 2px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
